# social-media-risk-assessment-v1

./: .gitignore  README.md  demo.py  pyproject.toml
models/: metadata.json  pii_risk_model.pkl  vectorizer.pkl
scripts/: convert_mastodon_hf_for_ingest.py  download_mastodon_hf.py  sample_pushshift_hf.py
src/pii_risk/: __init__.py  __main__.py  schema.py
src/pii_risk/eval/: __init__.py  audit.py
src/pii_risk/ingest/: mastodon.py  reddit.py
src/pii_risk/labels/: __init__.py  weak.py
src/pii_risk/ml/: __init__.py  combine.py  features.py  predict.py  train.py
src/pii_risk/pii/: __init__.py  detector.py  scoring.py
tests/: test_audit_export.py  test_ingest_mastodon.py  test_ingest_reddit.py  test_ml_smoke.py  test_pii_detector.py  test_pii_scoring.py  test_schema_smoke.py  test_weak_labeling.py
tests/fixtures/: mastodon_sample.jsonl  reddit_sample.jsonl
